# itmolabs

lab1/: Readme.md
lab1/client/: Cargo.toml
lab1/client/src/: main.rs
lab1/server/: Cargo.toml  Dockerfile  start.sh
lab1/server/src/: command.rs  database.rs  main.rs
lab2/: Readme.md  docker-compose.yml
lab2/client/: Dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
lab2/client/src/: App.jsx
lab2/client/src/components/: Home.jsx  Login.jsx  MessageList.jsx  Register.jsx
lab2/server/: Cargo.toml  Dockerfile  data.db
lab2/server/migrations/: 20240315110757_create_messages.down.sql
lab2/server/src/: lib.rs  main.rs  models.rs  routes.rs  util.rs
lab2/server/src/models/: message.rs  user.rs
lab2/server/src/routes/: auth.rs  message.rs
lab3/: Readme.md  docker-compose.yml
lab3/client/: index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml
lab3/client/src/: App.tsx
lab3/client/src/components/: Convert.tsx  Home.tsx  Login.tsx  MissingPage.tsx  Register.tsx
lab3/client/tests/: example.spec.ts
lab3/server/: Cargo.toml  Dockerfile  data.db
lab3/server/.sqlx/: query-0f6e1668978c780838eb454ddc90af7a984f0a4fee2f63bda3347246359ff852.json  query-7feb2dc667bd3613346e89bc6f95320c89110d8778eaed61cdcc56780369fd88.json
lab3/server/migrations/: 20240315095835_create_user.up.sql
lab3/server/src/: broadcast.rs  encode.rs  errors.rs  lib.rs  main.rs  models.rs  routes.rs
lab3/server/src/models/: upload.rs
lab3/server/src/routes/: download.rs  events.rs  upload.rs
