[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-identity = "0.7.1"
actix-multipart = "0.6.1"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.5.1"
actix-web-lab = "0.20.2"
anyhow = "1.0.81"
argon2 = "0.5.3"
derive_more = "0.99.17"
dotenvy = "0.15.7"
log = "0.4.21"
once_cell = "1.19.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7", features = [ "runtime-async-std", "tls-native-tls", "sqlite" ] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.15"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
